--- a/about.html
+++ b/about.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rhyno EV: About Us</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="style.css">
     <style>
         /* Basic styles */
         body {
@@ -29,7 +33,7 @@
 
         /* Header */
         h1 {
-            margin-top: 8%;
+            margin-top: 2%;
             background-color: #2ECC71;
             /* Green color */
             color: #fff;
@@ -73,62 +77,71 @@
             /* Content takes remaining space */
         }
 
-        /* Footer */
-        footer {
+
+
+        .img {
             text-align: center;
-            padding: 1rem;
-            background-color: #2ECC71;
-            color: #fff;
+            background-color: grey;
+
         }
     </style>
 </head>
 
-<body>
+<body align="center">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html"><img src="Black logo for B&W print.png"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact US</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="prebook.html">Pre-Book Now</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Product
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="product1.html">se03-lite</a></li>
+                            <li><a class="dropdown-item" href="product2.html">se03</a></li>
+                            <li><a class="dropdown-item" href="product3.html">se03Max</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="compare.html">Compare</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Social
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item"
+                                    href="https://www.instagram.com/rhyno.in?igsh=MW0wem96cmRienV2OQ=="><i
+                                        class="fa-brands fa-square-instagram icon"></i>Instagram</a></li>
+                            <li><a class="dropdown-item" href="https://www.linkedin.com/company/rhyno-wheels/"><i
+                                        class=" fa-brands fa-linkedin e"></i>Linkedin</a></li>
+                        </ul>
+                </ul>
 
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top a navbar-scroll" data-mdb-navbar-init>
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><img src="Black logo for B&W print.png"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About us</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="true">
-                                Products
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="product1.html">Se3lite</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="prebook.html">Pre-book now</a>
-                        </li>
-
-                    </ul>
-
-                </div>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
     <h1>Rhyno EV: Powering the Future</h1>
 
 
@@ -145,7 +158,7 @@
 
         <section class="innovation">
             <h2>Beyond the Ride</h2>
-            <img src="innovation.jpg" width="100%" height="auto" style="display:block;margin-bottom:1rem"
+            <img class="img" src="rhyno final.3.png" width="100%" height="auto" style="display:block;margin-bottom:1rem"
                 alt="Image showcasing Rhyno EV's innovative technology">
             <p>Safety is paramount at Rhyno EV. We've engineered our e-bikes to eliminate fire concerns and extend
                 battery life with cutting-edge technology. This translates to worry-free rides and a longer lifespan for
@@ -153,9 +166,8 @@
         </section>
 
         <section class="built-to-last">
-            <h2>Built for You, Built for Goa</h2>
-            <img src="goa-ebike.jpg" width="100%" height="auto" style="display:block;margin-bottom:1rem"
-                alt="Image of Rhyno EV e-bike in a scenic Goa location">
+            <img class="img" src="rhyno final.95.png" width="100%" height="auto"
+                style="display:block;margin-bottom:1rem" alt="Image of Rhyno EV e-bike in a scenic Goa location">
             <p>Our rugged yet sleek e-bikes are perfect for fleet operators, especially in tourist havens like Goa.
                 They're built for longevity, reliability, and to turn heads – the ideal combination for memorable
                 experiences.</p>
@@ -163,7 +175,22 @@
     </main>
 
     <footer>
-        <p>&copy; Rhyno EV - Join the e-volution</p>
+        <div class="ab" align="left">
+            <p style="font-weight: 600;font-size:large">Follow us</p>
+            <hr>
+            <a href="https://www.instagram.com/rhyno.in?igsh=MW0wem96cmRienV2OQ=="><i
+                    class="fa-brands fa-square-instagram icon"></i></a>
+            <a href="https://www.linkedin.com/company/rhyno-wheels/"><i class=" fa-brands fa-linkedin e"></i></a>
+            <ul class="ul" type="none">
+                <li class="l" style="font-weight: 500;">More about us</li>
+                <li class="l"><a href="contact.html">Contact us</a></li>
+                <li class="l"><a href="#">Privacy policy</a></li>
+                <li class="l"> <a href="https://www.linkedin.com/company/rhyno-wheels/">Careers</a></li>
+                <li class="l"><a href="#">Refund policy</a></li>
+                <li class="l"><a href="#">Website policy</a></li>
+                <li class="l"><a href="rental.html">Rentals</a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 
