--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rhyno</title>
+    <title>Rhyno contact</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.google.com/specimen/Lato">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <style>
         /* Basic styles */
         body {
@@ -94,61 +96,64 @@
             cursor: pointer;
             margin-top: 1rem;
         }
-
-        /* Footer */
-        footer {
-            text-align: center;
-            padding: 1rem;
-            background-color: #2ECC71;
-            color: #fff;
-        }
     </style>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top a navbar-scroll" data-mdb-navbar-init>
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><img src="Black logo for B&W print.png"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About us</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="true">
-                                Products
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="product1.html">Se3lite</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="prebook.html">Pre-book now</a>
-                        </li>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html"><img src="Black logo for B&W print.png"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact US</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="prebook.html">Pre-Book Now</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Product
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="product1.html">se03-lite</a></li>
+                            <li><a class="dropdown-item" href="product2.html">se03</a></li>
+                            <li><a class="dropdown-item" href="product3.html">se03Max</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="compare.html">Compare</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Social
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item"
+                                    href="https://www.instagram.com/rhyno.in?igsh=MW0wem96cmRienV2OQ=="><i
+                                        class="fa-brands fa-square-instagram icon"></i>Instagram</a></li>
+                            <li><a class="dropdown-item" href="https://www.linkedin.com/company/rhyno-wheels/"><i
+                                        class=" fa-brands fa-linkedin e"></i>Linkedin</a></li>
+                        </ul>
+                </ul>
 
-                    </ul>
-
-                </div>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
+
     <h1 id="b">Rhyno EV: Contact Us</h1>
 
 
@@ -188,7 +193,22 @@
     </main>
 
     <footer>
-        <p>&copy; Rhyno EV - Ride with us</p>
+        <div class="ab" align="left">
+            <p style="font-weight: 600;font-size:large">Follow us</p>
+            <hr>
+            <a href="https://www.instagram.com/rhyno.in?igsh=MW0wem96cmRienV2OQ=="><i
+                    class="fa-brands fa-square-instagram icon"></i></a>
+            <a href="https://www.linkedin.com/company/rhyno-wheels/"><i class=" fa-brands fa-linkedin e"></i></a>
+            <ul class="ul" type="none">
+                <li class="l" style="font-weight: 500;">More about us</li>
+                <li class="l"><a href="contact.html">Contact us</a></li>
+                <li class="l"><a href="#">Privacy policy</a></li>
+                <li class="l"> <a href="https://www.linkedin.com/company/rhyno-wheels/">Careers</a></li>
+                <li class="l"><a href="#">Refund policy</a></li>
+                <li class="l"><a href="#">Website policy</a></li>
+                <li class="l"><a href="rental.html">Rentals</a></li>
+            </ul>
+        </div>
     </footer>
 
     <script src="https://kit.fontawesome.com/your_fontawesome_kit_id.js" crossorigin="anonymous"></script>
