--- a/prebook.html
+++ b/prebook.html
@@ -72,6 +72,9 @@
         .form-group {
             margin-bottom: 15px;
         }
+        @media only screen and (max-width: 768px) {
+            .pre-book-form{
+                width:100%;}
     </style>
 </head>
 
