--- a/prebook.html
+++ b/prebook.html
@@ -74,7 +74,7 @@
         }
         @media only screen and (max-width: 768px) {
             .pre-book-form{
-                width:100%;}
+                width:100%;margin-left: 0%;}
     </style>
 </head>
 
